<resources>
    <string name="app_name">datFM</string>
    <string name="app_properties">Properties</string>
    <string name="navbar_up">Parent directory</string>
    <string name="navbar_go">Go</string>
    <string name="btn_share">Share</string>
    <string name="btn_newfolder">New Folder</string>
    <string name="btn_addtoarchive">Archive</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_move">Move</string>
    <string name="btn_rename">Rename</string>
    <string name="btn_selectall">Select All</string>
    <string name="btn_deselectall">Deselect All</string>
    <string name="btn_delete">Delete</string>
    <string name="mainmenu_addfolder">Add Folder</string>
    <string name="mainmenu_refresh">Refresh</string>
    <string name="mainmenu_favorite">Favorite</string>
    <string name="mainmenu_udev">udev</string>
    <string name="mainmenu_home">Home</string>
    <string name="mainmenu_settings">Settings</string>
    <string name="mainmenu_about">About</string>
    <string name="mainmenu_exit">Exit</string>
    <string name="contextmenu_title">Menu:</string>
    <string name="contextmenu_open">Open</string>
    <string name="contextmenu_open_with">Open with...</string>
    <string name="contextmenu_open_as_archive">Open as archive</string>
    <string name="contextmenu_open_unpack_ZA">Unpack with ZA</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_move">Move</string>
    <string name="contextmenu_rename">Rename</string>
    <string name="contextmenu_delete">Delete</string>
    <string name="contextmenu_share">Share</string>
    <string name="contextmenu_properties">Properties</string>
    <string name="contextmenu_edit">Edit</string>
    <string name="settings_group_view">View</string>
    <string name="settings_group_other">Other</string>
    <string name="settings_group_performance">Performance</string>
    <string name="settings_group_network">Network</string>
    <string name="settings_group_backup">Backup</string>
    <string name="settings_group_features">Features</string>
    <string name="settings_group_swiftp">FTP server</string>
    <string name="settings_group_dangerous">Dangerous</string>
    <string name="settings_elements_title_theme">Themes</string>
    <string name="settings_elements_title_theme_icons">Icon pack</string>
    <string name="settings_elements_title_cp">Control Panel</string>
    <string name="settings_elements_title_appicons">App icons</string>
    <string name="settings_elements_title_photoicons">Photo icons</string>
    <string name="settings_elements_title_videoicons">Video icons</string>
    <string name="settings_elements_title_icons_cache">Icons cache</string>
    <string name="settings_elements_title_icons_size">Height of icons</string>
    <string name="settings_elements_title_text_name_size">File name text size</string>
    <string name="settings_elements_title_text_discr_size">Description text size</string>
    <string name="settings_elements_title_text_font_style">Font style</string>
    <string name="settings_elements_title_text_font_typeface">Font typeface</string>
    <string name="settings_elements_title_text_bold_folder">Bold for folder name</string>
    <string name="settings_elements_title_small_panel">Small panels</string>
    <string name="settings_elements_title_cptext">Text on panel</string>
    <string name="settings_elements_title_navbar">Address bar</string>
    <string name="settings_elements_title_buttonbar_size">Control panel height</string>
    <string name="settings_elements_title_pathbar_size">Address bar height</string>
    <string name="settings_elements_title_bartext_size">Bar text size</string>
    <string name="settings_elements_title_single_navbar">Single address bar</string>
    <string name="settings_elements_title_single_panel">Single panel mode</string>
    <string name="settings_elements_title_force_dual_panel_in_landscape">Force dual-panel in landscape</string>
    <string name="settings_elements_title_folder_discription">Folder descriptions</string>
    <string name="settings_elements_title_files_discription">Files descriptions</string>
    <string name="settings_elements_title_panel_discription">Panel descriptions</string>
    <string name="settings_elements_title_show_date">Show date</string>
    <string name="settings_elements_title_opendir">Open new directory</string>
    <string name="settings_elements_title_openarcdir">Open archive directory</string>
    <string name="settings_elements_title_openarcdir_window">Archive directory panel</string>
    <string name="settings_elements_title_savepath">Save path</string>
    <string name="settings_elements_title_focusondir">Focus on directory</string>
    <string name="settings_elements_title_backbtn_override">Back button</string>
    <string name="settings_elements_title_fastscroll">Fast scroll</string>
    <string name="settings_elements_title_sambalogin">Samba logging</string>
    <string name="settings_elements_title_clear_filecache">Clear file cache</string>
    <string name="settings_elements_title_do_backup">Save settings</string>
    <string name="settings_elements_title_restore_backup">Restore settings</string>
    <string name="settings_elements_title_kamikaze">Kamikaze mode</string>
    <string name="settings_elements_title_build_in">Build-in media player</string>
    <string name="settings_elements_title_root">root</string>
    <string name="settings_elements_title_show_hide">Show hidden files and folders</string>
    <string name="settings_elements_summary_theme">Change apply after application restart</string>
    <string name="settings_elements_summary_theme_icons">Amazing icons</string>
    <string name="settings_elements_summary_cp">Show always</string>
    <string name="settings_elements_summary_appicons">Get application icons from APK</string>
    <string name="settings_elements_summary_photoicons">Show photo thumbnail</string>
    <string name="settings_elements_summary_videoicons">Show video thumbnail</string>
    <string name="settings_elements_summary_icons_cache">Select preferred cache size</string>
    <string name="settings_elements_summary_icons_size">Set height of items in row and size of icons</string>
    <string name="settings_elements_summary_text_name_size">Set text size for file name</string>
    <string name="settings_elements_summary_text_discr_size">Set text size for file description</string>
    <string name="settings_elements_summary_text_font_style">Set font style</string>
    <string name="settings_elements_summary_text_font_typeface">Set font typeface</string>
    <string name="settings_elements_summary_text_bold_folder">Always use bold for folder name</string>
    <string name="settings_elements_summary_small_panel">Use small panels, for phones</string>
    <string name="settings_elements_summary_cptext">Show text on buttons in panel</string>
    <string name="settings_elements_summary_navbar">Show address bar on the top</string>
    <string name="settings_elements_summary_single_navbar">Show only active address bar</string>
    <string name="settings_elements_summary_single_panel">Single only active panel</string>
    <string name="settings_elements_summary_force_dual_panel_in_landscape">Override single panel switch in landscape</string>
    <string name="settings_elements_summary_buttonbar_size">Change height of control panel</string>
    <string name="settings_elements_summary_pathbar_size">Change height of address bar</string>
    <string name="settings_elements_summary_bartext_size">Change text size in bar</string>
    <string name="settings_elements_summary_folder_discription">Show folder descriptions</string>
    <string name="settings_elements_summary_files_discription">Show files descriptions</string>
    <string name="settings_elements_summary_panel_discription">Show descriptions in bottom of panel</string>
    <string name="settings_elements_summary_show_date">Show date in descriptions</string>
    <string name="settings_elements_summary_opendir">Open new directory after create</string>
    <string name="settings_elements_summary_openarcdir">Open archive directory after unpack</string>
    <string name="settings_elements_summary_openarcdir_window">Open in current panel</string>
    <string name="settings_elements_summary_savepath">Restore path on start</string>
    <string name="settings_elements_summary_focusondir">Set focus on current directory when go UP</string>
    <string name="settings_elements_summary_backbtn_override">Go up when pressed, quit when long pressed, if checked</string>
    <string name="settings_elements_summary_fastscroll">In loooong lists</string>
    <string name="settings_elements_summary_sambalogin">Support logging for Samba</string>
    <string name="settings_elements_summary_clear_filecache">Clear file cache when exit</string>
    <string name="settings_elements_summary_do_backup">/sdcard/Android/data/datFM/backup</string>
    <string name="settings_elements_summary_restore_backup">/sdcard/Android/data/datFM/backup</string>
    <string name="settings_elements_summary_kamikaze">Not ask anything, just execute</string>
    <string name="settings_elements_summary_root">Use root privilege</string>
    <string name="settings_elements_summary_show_hide">Show hidden elements for local or remote storage</string>
    <string name="fileslist_parent_directory">Parent Directory</string>
    <string name="fileslist_directory">&lt;dir&gt;</string>
    <string name="fileslist_folders_count">Folders:</string>
    <string name="fileslist_files_count">Files:</string>
    <string name="fileslist_file_selected">Selected:</string>
    <string name="fileslist_network">Network</string>
    <string name="fileslist_favorites">Favorites</string>
    <string name="fileslist_memory_card">External Storage</string>
    <string name="fileslist_root">Root</string>
    <string name="fileslist_samba">Samba</string>
    <string name="fileslist_sftp">SFTP</string>
    <string name="fileslist_ftp">FTP</string>
    <string name="fileslist_apps">Apps</string>
    <string name="fileslist_apps_package_name">Package name</string>
    <string name="fileslist_exit">Exit</string>
    <string name="fileslist_action">Action</string>
    <string name="fileslist_add_favorite">Add to favorites</string>
    <string name="fileslist_add_samba">Add Samba server</string>
    <string name="fileslist_browse_samba">Browse smb://</string>
    <string name="fileslist_add_sftp">Add SFTP server</string>
    <string name="fileslist_add_ftp">Add FTP server</string>
    <string name="fileslist_run_ftp">Start FTP server</string>
    <string name="fileslist_stop_ftp">Stop FTP server</string>
    <string name="ui_dialog_btn_ok">OK</string>
    <string name="ui_dialog_btn_cancel">Cancel</string>
    <string name="ui_dialog_title_firstrun">Welcome!</string>
    <string name="ui_dialog_title_newfolder">New Folder</string>
    <string name="ui_dialog_title_archive">Archive</string>
    <string name="ui_dialog_title_archive_extract">Extract to:</string>
    <string name="ui_dialog_hint_archive">New Archive Name</string>
    <string name="ui_dialog_archive_archive">Archive Name:</string>
    <string name="ui_dialog_archive_type">Archive Type:</string>
    <string name="ui_dialog_archive_level">Compression Level:</string>
    <string name="ui_dialog_archive_del_after_compress">Delete files after compression done.</string>
    <string name="ui_dialog_smd_addserver_bookmark_name">Bookmark name</string>
    <string name="ui_dialog_smd_addserver_ip_hostname">IP/hostname</string>
    <string name="ui_dialog_smd_addserver_start_dir">Start directory</string>
    <string name="ui_dialog_smd_addserver_username">Username</string>
    <string name="ui_dialog_smd_addserver_password">Password</string>
    <string name="ui_dialog_smd_addserver_secret_key">Encryption key (keychain password)</string>
    <string name="ui_dialog_sftp_addserver_port">Port</string>
</resources>