<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sftp_add_server_name" android:layout_gravity="left|center_vertical"
                    android:hint="@string/ui_dialog_smd_addserver_bookmark_name" android:singleLine="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sftp_add_server_ip" android:layout_gravity="left|center_vertical"
                    android:hint="@string/ui_dialog_smd_addserver_ip_hostname" android:singleLine="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sftp_add_server_startdir" android:layout_gravity="left|center_vertical"
                    android:hint="@string/ui_dialog_smd_addserver_start_dir" android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sftp_add_server_user" android:layout_gravity="left|center_vertical"
                    android:hint="@string/ui_dialog_smd_addserver_username" android:singleLine="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sftp_add_server_pass" android:layout_gravity="left|center_vertical"
                    android:hint="@string/ui_dialog_smd_addserver_password" android:singleLine="true" android:password="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sftp_add_server_port" android:layout_gravity="left|center_vertical" android:hint="@string/ui_dialog_sftp_addserver_port"
                    android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sftp_add_server_encrypt_pass" android:layout_gravity="left|center_vertical"
            android:hint="@string/ui_dialog_smd_addserver_secret_key" android:singleLine="true" android:password="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Cert:"
                android:id="@+id/textView3" android:paddingLeft="10dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*.PEM"
                android:id="@+id/btnSFTP_PEM" android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:id="@+id/linearSFTPkeypass">
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Cert Key:"
                android:id="@+id/textView4" android:paddingLeft="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSFTPkeypass" android:hint="Passphrase" android:password="true"/>
    </LinearLayout>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="StrictHostKeyChecking"
            android:id="@+id/checkSFTPstrictHost" android:checked="true"/>
</LinearLayout>